<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TabLayout
        style="@style/CalendarTabLayout"
        android:id="@+id/tabLayout_calendar"
        android:background="@drawable/tablayout_calendar_background"
        android:rotationX="180"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tab_name_monday" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tab_name_tuesday" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tab_name_wednesday" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tab_name_thursday" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tab_name_friday" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tab_name_saturday" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tab_name_sunday" />

    </android.support.design.widget.TabLayout>

</LinearLayout>