<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.nowwego.hakwonga.activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="59dp"
        android:paddingRight="22dp"
        android:paddingLeft="22dp"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="85dp"
            android:layout_height="87dp"
            android:src="@drawable/app_logo"
            android:scaleType="center"/>

        <TextView
            style="@style/TextViewStandard"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="30sp"
            android:textColor="@color/cool_black"
            android:text="@string/app_name"/>

        <TextView
            style="@style/TextViewStandard"
            android:layout_marginTop="5dp"
            android:textSize="13sp"
            android:textColor="@color/cool_grey"
            android:text="@string/app_slogan" />

        <EditText
            style="@style/TextInputStandard"
            android:id="@+id/editText_email_address"
            android:layout_marginTop="69dp"
            android:inputType="textWebEmailAddress"
            android:hint="@string/hint_email" />

        <EditText
            style="@style/TextInputStandard"
            android:id="@+id/editText_password"
            android:inputType="textWebPassword"
            android:hint="@string/hint_password" />

        <Button
            style="@style/ButtonText"
            android:padding="0dp"
            android:text="@string/button_forgot_password"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            style="@style/ButtonStandard"
            android:background="@drawable/login_btn_background"
            android:text="@string/button_login"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/ButtonStandard"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/signup_btn_background"
                android:textColor="@color/cool_grey"
                android:text="@string/button_signup_student"/>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/cool_grey"/>

            <Button
                style="@style/ButtonStandard"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/signup_btn_background"
                android:textColor="@color/cool_grey"
                android:text="@string/button_signup_parent"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
