<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <android.support.design.widget.TabLayout
        style="@style/TabLayoutStandard"
        android:id="@+id/tabLayout_main_navigation"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:icon="@drawable/selector_tab_home"
            android:text="@string/tab_name_home" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:icon="@drawable/selector_tab_store"
            android:text="@string/tab_name_store" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:icon="@drawable/selector_tab_list"
            android:text="@string/tab_name_list" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:icon="@drawable/selector_tab_search"
            android:text="@string/tab_name_search" />

    </android.support.design.widget.TabLayout>

</LinearLayout>