<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        style="@style/LoginButton"
        android:id="@+id/button_login"
        android:text="@string/button_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            style="@style/SignupButton"
            android:id="@+id/button_signup_student"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/button_signup_student" />

        <!-- Vertical Separator -->
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/cool_grey" />

        <Button
            style="@style/SignupButton"
            android:id="@+id/button_signup_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/button_signup_parent" />

    </LinearLayout>

</LinearLayout>

