<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:fontFamily="@font/default_font"
            android:textAlignment="center"
            android:textColor="@color/cool_grey"
            android:text="@string/tab_name_sunday"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:fontFamily="@font/default_font"
            android:textAlignment="center"
            android:textColor="@color/cool_grey"
            android:text="@string/tab_name_monday"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:fontFamily="@font/default_font"
            android:textAlignment="center"
            android:textColor="@color/cool_grey"
            android:text="@string/tab_name_tuesday"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:fontFamily="@font/default_font"
            android:textAlignment="center"
            android:textColor="@color/cool_grey"
            android:text="@string/tab_name_wednesday"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:fontFamily="@font/default_font"
            android:textAlignment="center"
            android:textColor="@color/cool_grey"
            android:text="@string/tab_name_thursday"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:fontFamily="@font/default_font"
            android:textAlignment="center"
            android:textColor="@color/cool_grey"
            android:text="@string/tab_name_friday"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:fontFamily="@font/default_font"
            android:textAlignment="center"
            android:textColor="@color/cool_grey"
            android:text="@string/tab_name_saturday"/>

    </LinearLayout>

</LinearLayout>