<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="22.5dp"
    android:paddingRight="22.5dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:background="@color/white">

    <android.support.design.widget.TabLayout
        style="@style/ScheduleTabLayout"
        android:id="@+id/tabLayout_schedule"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tab_name_daily" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tab_name_weekly" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tab_name_monthly" />

    </android.support.design.widget.TabLayout>

</LinearLayout>